project(ChangeMe LANGUAGES CXX VERSION 0.1.0)

set(PROJECT_LIB_SRC_DIR ${PROJECT_ROOT_DIR}/src CACHE INTERNAL "PROJECT_LIB_SRC_DIR")

set(
    SOURCE_FILES
    main.cpp
)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
add_dependencies(${PROJECT_NAME} pwn++)
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_20)
set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 20)
target_include_directories(${PROJECT_NAME} PUBLIC $<TARGET_PROPERTY:pwn++,INTERFACE_INCLUDE_DIRECTORIES>)
target_compile_definitions(${PROJECT_NAME} PRIVATE $<TARGET_PROPERTY:pwn++,INTERFACE_COMPILE_DEFINITIONS>)
target_compile_options(${PROJECT_NAME} PRIVATE $<TARGET_PROPERTY:pwn++,INTERFACE_COMPILE_OPTIONS>)
target_link_options(${PROJECT_NAME} PRIVATE  $<TARGET_PROPERTY:pwn++,INTERFACE_LINK_OPTIONS> /SUBSYSTEM:Console)
target_link_libraries(${PROJECT_NAME} PRIVATE pwn++ $<TARGET_PROPERTY:pwn++,INTERFACE_LINK_LIBRARIES>)
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
